Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD 166 To capture actions associated with an account plan</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>