Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <description>Field to capture the concatenated action plan name to include auto number, record type and type</description>
    <formula>Name &amp; &quot; - &quot; &amp; RecordType.Name &amp; IF(ISPICKVAL(Type__c, &quot;&quot;), &quot;&quot;, &quot; - &quot; &amp; TEXT(Type__c))</formula>
    <label>Action Plan</label>
    <type>Text</type>
</CustomField>