Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Action_Plan_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_End_Date__c</fullName>
    <description>AD-753 Ensure the Start Date is before the End Date</description>
    <label>Action Plan End Date</label>
    <type>Date</type>
</CustomField>