Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Action_Plan_Text__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Text__c</fullName>
    <description>Field to capture the concatenated action plan name to include auto number, record type and type</description>
    <label>Action Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>