Agentforce/force-app/main/default/objects/Action_Plan__c/fields/ActionPlanCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>ActionPlanCaseSafeID__c</fullName>
    <description>Action Plan CaseSafeID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ActionPlanCaseSafeID</label>
    <type>Text</type>
</CustomField>