Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Actions_discussed_with_your_team__c.field-meta.xml
<CustomField>
    <fullName>Actions_discussed_with_your_team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actions discussed with your team</label>
    <type>Checkbox</type>
</CustomField>