Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Actions_Progress_Text__c.field-meta.xml
<CustomField>
    <fullName>Actions_Progress_Text__c</fullName>
    <description>AD-821 - hidden field to display in text the flag image</description>
    <formula>IF(
    Total_No_of_Actions__c = No_of_Actions_Complete__c,
    &apos;Green&apos;,
    IF(
        NOT(ISPICKVAL(Status__c, &apos;Overdue&apos;)) &amp;&amp; Total_No_of_Actions__c &lt;&gt; No_of_Actions_Complete__c,
        &apos;Grey&apos;,
        IF(
            ISPICKVAL(Status__c, &apos;Overdue&apos;),
            &apos;Red&apos;,
            NULL
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actions Progress Text</label>
    <type>Text</type>
</CustomField>