Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Assignedto__c.field-meta.xml
<CustomField>
    <fullName>Assignedto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-166 To capture actions associated with an account plan</description>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>