Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Bid__c.field-meta.xml
<CustomField>
    <fullName>Bid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-280 - lookup to the Bid object</description>
    <label>Bid</label>
    <referenceTo>Bid__c</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>