Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Client_Visited__c.field-meta.xml
<CustomField>
    <fullName>Client_Visited__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Visited</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>