Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Days_Since_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Update__c</fullName>
    <description>AD-811 to understand what retention  activity is happening when contracts have less than 18 months until they are due to end</description>
    <formula>TODAY() - Plan_Last_Update__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>