Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Deadline_Date__c</fullName>
    <label>Deadline Date</label>
    <type>Date</type>
</CustomField>