Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>AD-166 To capture actions associated with an account plan</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>