Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Legacy_AS_Account_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_AS_Account_Plan_Id__c</fullName>
    <label>Legacy AS Account Plan Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>