Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Legacy_AS_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_AS_ID__c</fullName>
    <label>Legacy AS ID</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>