Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Legacy_OCS_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OCS_ID__c</fullName>
    <label>Legacy OCS ID</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>