Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Managing_Director_Email__c.field-meta.xml
<CustomField>
    <fullName>Managing_Director_Email__c</fullName>
    <description>AD-827 - field to capture the email address of the record Owner&apos;s Managing Director</description>
    <label>Managing Director Email</label>
    <type>Email</type>
</CustomField>