Agentforce/force-app/main/default/objects/Action_Plan__c/fields/No_of_Actions_Pending__c.field-meta.xml
<CustomField>
    <fullName>No_of_Actions_Pending__c</fullName>
    <description>Populated by DLRS</description>
    <label># Actions Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>