Agentforce/force-app/main/default/objects/Action_Plan__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-180 - Stores the NPS that this Action Plan was generated from</description>
    <label>NPS</label>
    <referenceTo>NPS__c</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>