Agentforce/force-app/main/default/objects/Action_Plan__c/fields/NPS_Status__c.field-meta.xml
<CustomField>
    <fullName>NPS_Status__c</fullName>
    <formula>TEXT( NPS__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Status</label>
    <type>Text</type>
</CustomField>