Agentforce/force-app/main/default/objects/Action_Plan__c/fields/NPS_Surveyor__c.field-meta.xml
<CustomField>
    <fullName>NPS_Surveyor__c</fullName>
    <formula>NPS__r.NPS_Surveyor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Surveyor</label>
    <type>Text</type>
</CustomField>