Agentforce/force-app/main/default/objects/Action_Plan__c/fields/NPS_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>NPS_Visit_Date__c</fullName>
    <label>NPS Visit Date</label>
    <type>Date</type>
</CustomField>