Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Owner_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Owner_Business_Unit__c</fullName>
    <label>Owner Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1M</fullName>
            </value>
            <value>
                <fullName>Aktrion</fullName>
            </value>
            <value>
                <fullName>APAC &amp; ME</fullName>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
            </value>
            <value>
                <fullName>Benelux</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Cambodia OCS</fullName>
            </value>
            <value>
                <fullName>Cambodia PCS</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Central Engineering</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Czech</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>FM</fullName>
            </value>
            <value>
                <fullName>Foodhouse</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Hard Services</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hungary</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>IOT</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>