Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Full_Name__c</fullName>
    <formula>Owner:User.Full_Name__c</formula>
    <label>Owner Full Name</label>
    <type>Text</type>
</CustomField>