Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <description>AD-811 to understand what retention  activity is happening when contracts have less than 18 months until they are due to end</description>
    <label>Plan</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>