Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Plan_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Plan_Last_Update__c</fullName>
    <description>AD-811 to understand what retention  activity is happening when contracts have less than 18 months until they are due to end</description>
    <label>Plan Last Update</label>
    <type>Date</type>
</CustomField>