Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <description>AD-821 - Progress image for an action plan</description>
    <formula>IF(
    No_of_Actions_Overdue__c &gt; 0, IMAGE(&quot;/resource/ProgressBarRed&quot;, &quot;Red&quot;, 18, 100),
    IF(
        Total_No_of_Actions__c = 0, IMAGE(&quot;/resource/ProgressBarGrey&quot;, &quot;Grey&quot;, 18, 100),
        IMAGE(&quot;/resource/ProgressBarGreen&quot;, &quot;Green&quot;, 18,(100 * (No_of_Actions_Complete__c / Total_No_of_Actions__c))) &amp;
        IMAGE(&quot;/resource/ProgressBarGrey&quot;, &quot;Grey&quot;, 18,(100 * (No_of_Actions_Pending__c / Total_No_of_Actions__c)))
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress</label>
    <type>Text</type>
</CustomField>