Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Total_No_of_Actions__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Actions__c</fullName>
    <description>Populated by DLRS</description>
    <label>Total No. Actions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>