Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trigger__c</fullName>
    <description>Trigger for Flows / Data Migration</description>
    <label>Trigger</label>
    <length>20</length>
    <type>Text</type>
</CustomField>