Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>AD-831 To capture steps that are being taken to mitigate the risk identified</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract Risk</fullName>
            </value>
            <value>
                <fullName>Financial Risk</fullName>
            </value>
            <value>
                <fullName>H&amp;S Risk</fullName>
            </value>
            <value>
                <fullName>Operational Risk</fullName>
            </value>
            <value>
                <fullName>Relationship Risk</fullName>
            </value>
            <value>
                <fullName>Tender Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>