Agentforce/force-app/main/default/objects/Action_Plan__c/fields/Who_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Who_Full_Name__c</fullName>
    <description>AD-811 to understand what retention  activity is happening when contracts have less than 18 months until they are due to end</description>
    <label>Who Full Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>