Agentforce/force-app/main/default/objects/Action_Plan__c/fields/X7_Days_Notification__c.field-meta.xml
<CustomField>
    <fullName>X7_Days_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-139 to receive a notification 7 and 2 days before my Action Plan becomes due where not complete</description>
    <label>7 Days Notification</label>
    <type>Checkbox</type>
</CustomField>