Agentforce/force-app/main/default/objects/Action_Plan__c/recordTypes/Bid_Management.recordType-meta.xml
<RecordType>
    <fullName>Bid_Management</fullName>
    <active>true</active>
    <label>Bid Management</label>
</RecordType>