Agentforce/force-app/main/default/objects/Action_Plan__c/recordTypes/Retention.recordType-meta.xml
<RecordType>
    <fullName>Retention</fullName>
    <active>true</active>
    <label>Retention</label>
</RecordType>