Agentforce/force-app/main/default/objects/Action_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Action_Plan__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Progress__c</columns>
    <columns>Type__c</columns>
    <columns>Action_Plan_Start_Date__c</columns>
    <columns>Action_Plan_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>