Agentforce/force-app/main/default/objects/Action_Plan__c/listViews/My_Active_Plans.listView-meta.xml
<ListView>
    <fullName>My_Active_Plans</fullName>
    <columns>Action_Plan__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Progress__c</columns>
    <columns>Type__c</columns>
    <columns>Action_Plan_Start_Date__c</columns>
    <columns>Action_Plan_End_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,In Progress</value>
    </filters>
    <label>My Active Plans</label>
</ListView>